[project]
name = "helm-charts"
version = "0.1.0"
description = "Some helm charts"
authors = [
    {name = "Xander Harris",email = "xandertheharris@gmail.com"}
]
license = {text = "Copyright 2025"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sphinx-autobuild (>=2025.8.25,<2026.0.0)",
    "sphinx-copybutton (>=0.5.2,<0.6.0)",
    "sphinxcontrib-autoyaml (>=1.1.3,<2.0.0)",
    "sphinx-book-theme (>=1.1.4,<2.0.0)",
    "version-query (>=1.7.0,<2.0.0)",
    "sphinx (<9)",
    "myst-parser[linkify] (>=4.0.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
